# apps/api/openapi/openapi.json
@@ -276,14 +276,10 @@
                 "additionalProperties": false,
                 "type": "object",
                 "required": [
-                  "name",
-                  "image"
+                  "name"
                 ],
                 "properties": {
                   "name": {
-                    "type": "string"
-                  },
-                  "image": {
                     "type": "string"
                   },
                   "command": {
